[gd_scene load_steps=2 format=3 uid="uid://cxgpt0j2dc5bd"]

[ext_resource type="Script" path="res://player_actions.gd" id="1_fm2k8"]

[node name="Player_actions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fm2k8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.462745)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 212.0
offset_right = -15.0
offset_bottom = -367.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.666667, 0.666667, 0.666667, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 219.0
offset_right = -20.0
offset_bottom = -372.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 219.0
offset_right = 360.0
offset_bottom = 269.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Switch" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 270.0
offset_right = 360.0
offset_bottom = 310.0
text = "Switch"

[node name="Captain" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 320.0
offset_right = 360.0
offset_bottom = 360.0
text = "Make captain"

[node name="Vice-captain" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 370.0
offset_right = 360.0
offset_bottom = 410.0
text = "Make vice-captain"

[node name="Cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 420.0
offset_right = 360.0
offset_bottom = 460.0
text = "Cancel"

[connection signal="pressed" from="Switch" to="." method="_on_switch_pressed"]
[connection signal="pressed" from="Captain" to="." method="_on_captain_pressed"]
[connection signal="pressed" from="Vice-captain" to="." method="_on_vicecaptain_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
